fix: changed gap px

--- a/style/global.css
+++ b/style/global.css
@@ -1,4 +1,3 @@
-
 main {
     width: 70%;
     margin: 96px auto;
@@ -16,7 +15,7 @@ main {
   }
   
   header nav {
-    gap: 48px;
+    gap: 150px;
     display: flex;
     justify-content: center;
   }
